# framework.connectivity.nfc-manager

./: .gitignore  CMakeLists.txt  nfc-manager.manifest
packaging/: nfc-manager.service  nfc-manager.spec
src/clientlib/: CMakeLists.txt  net_nfc_client.c  net_nfc_client_hce.c  net_nfc_client_se.c  net_nfc_client_system_handler.c  net_nfc_client_tag.c  net_nfc_client_target_info.c  nfc.pc.in
src/commonlib/: CMakeLists.txt  net_nfc.xml  net_nfc_util.c  net_nfc_util_handover_bt.c  net_nfc_util_handover_wfd.c  net_nfc_util_handover_wps.c  net_nfc_util_sign_record.c
src/manager/: CMakeLists.txt  net_nfc_app_util.c  net_nfc_controller.c  net_nfc_manager.c  net_nfc_server.c  net_nfc_server_common.c  net_nfc_server_context.c  net_nfc_server_handover_bt.c  net_nfc_server_handover_wfd.c  net_nfc_server_handover_wps.c  net_nfc_server_hce.c  net_nfc_server_llcp.c  net_nfc_server_manager.c  net_nfc_server_process_handover.c  net_nfc_server_process_snep.c  net_nfc_server_route_table.c  net_nfc_server_se.c  net_nfc_server_system_handler.c  net_nfc_server_tag.c  net_nfc_server_test.c  net_nfc_server_transceive.c  net_nfc_server_vconf.c  nfc-manager.xml
src/plugin/: CMakeLists.txt  pkgmgr_plugin_cardemulation.c
test_clinet_app/ndef-tool/: ndef-tool-display.c  ndef-tool-tag.c  ndef-tool.c  ndef-tool.h
test_clinet_app/nfc_client/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  main.c  net_nfc_test_client.c  net_nfc_test_handover.c  net_nfc_test_jewel.c  net_nfc_test_llcp.c  net_nfc_test_ndef.c  net_nfc_test_p2p.c  net_nfc_test_se.c  net_nfc_test_tag.c  net_nfc_test_tag_felica.c  net_nfc_test_tag_mifare.c  net_nfc_test_transceive.c
(+18 files in other folders)
